[tool.poetry]
name = "2k24-407"
version = "0.1.0"
description = ""
authors = ["BotirIslomboev <=>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pytest = "^8.3.4"
apify-client = "^1.9.2"
selenium = "^4.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
